# POC-Tracker-Onion-Share

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DECENTRALIZED_NOTES.md  INSIGHTS.md  LICENSE  PATCH_NOTES.md  README.md  REFERENCIAS_ACADEMICAS.md  TERMS.txt  base.md  installer.iss
.github/workflows/: build.yml
debian/: onion-poc.appdata.xml  onion-poc.desktop
deploy/: Dockerfile  README.md  docker-compose.yml
src/: config.rs  crypto.rs  discovery.rs  lib.rs  link.rs  main.rs  share.rs  tracker_proto.rs
src/gui/: app.rs  bg.rs  mod.rs  shared.rs
src/server/: mod.rs  routes.rs  state.rs
src/tor/: control.rs  mod.rs  process.rs
src/wizard/: app.rs  background.rs  installer.rs  mod.rs  ui.rs
tests/: unit.rs
